# penumbra-indexer

./: .dockerignore  .env  .env.production  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  overview.md
migrations/: 20250207_create_blocks_table.sql
proto/: block.proto  compact_block.proto
src/: api.rs  client.rs  db.rs  error.rs  grpc_client.rs  main.rs  proto.rs
src/api/: mod.rs  openapi.rs  routes.rs
src/api/routes/: blocks.rs  common.rs  mod.rs  stats.rs  transactions.rs
src/client/: mod.rs  models.rs  rpc.rs  sync.rs
src/db/: blocks.rs  mod.rs  schema.rs  stats.rs  transactions.rs
src/models/: block.rs  mod.rs  stats.rs  transaction.rs
