[package]
name = "penumbra-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.10", features = ["tls", "transport"] }
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.0", features = ["full"] }
tonic-web = "0.10"
anyhow = "1.0"
hex = "0.4.3"

[build-dependencies]
tonic-build = "0.10"